<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Climbing Diary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search</string>
    <string name="star">\u2605</string>
    <!--Settings-->
    <string name="verwalten_pref_header">Manage</string>
    <string name="pref_gebiete">Areas</string>
    <string name="pref_gebiete_list">Arealist</string>
    <string name="pref_sektoren">Sectors</string>
    <string name="export_pref_header">Export</string>
    <string name="safty_copy_pref_header">Safety copy</string>
    <string name="pref_time_slider">Time-Slider</string>
    <string name="menu_suche">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_gebiete">Areas</string>
    <string name="menu_sortieren">Sorting</string>
    <string name="menu_schwierigkeit">Grade</string>
    <string name="menu_gebiet">Areas</string>
    <string name="menu_datum">Date</string>
    <string name="settings_ui_header">Control</string>
    <string name="settings_title">Settings</string>
    <string name="pref_language">Language</string>
    <string name="backup_db_summary">Creates a backup of the database</string>
    <string name="backup_db_title">Create backup</string>
    <string name="restore_db_title">Restore database</string>
    <string name="restore_db_summary">Choose a backup for recovery</string>
    <string name="time_range_summary">In years or period</string>
    <string name="language_switch_title">Change Language</string>
    <string name="alert_db_restored_correctly">The database was restored !</string>
    <string name="alert_db_export_correctly">The database was exported !</string>
    <string name="app_will_restart">The application will be restarted.</string>
    <string name="alert_language_change">The language was changed !</string>
    <string name="alert_restore_db_failure">The restore went wrong 😓</string>
    <string name="alert_export_db_failure">The export went wrong 😓</string>
    <string name="tab_statistic">Statistic</string>
    <string name="tabs_routen">Routes</string>
    <string name="tabs_boulder">Boulder</string>
    <string name="tabs_projects">Projects</string>
    <string name="statistik">Statistic</string>
    <string name="verlauf">Process</string>
    <string name="tabelle">Table</string>
    <string name="stats_table_title">Performance by grade</string>
    <string name="stats_table_group_section_title">Overview by leading number</string>
    <string name="stats_table_group_title">%1$ss</string>
    <string name="stats_table_group_detail">%1$d detailed grades combined</string>
    <string name="stats_table_section_title">Grades in detail</string>
    <string name="stats_table_empty">No data is available for the current filter.</string>
    <string name="stats_table_summary_total">All ascents</string>
    <string name="stats_table_summary_hardest">Hardest grade</string>
    <string name="stats_table_summary_levels">Tracked grades</string>
    <string name="stats_table_total_inline">Total %1$d</string>
    <string name="table_level_header">LEVEL</string>
    <string name="table_gesamt_header">ALL</string>
    <string name="alert_error_text">An error has occurred.</string>
    <string name="nav_title_climbing">Climbing</string>
    <string name="nav_title_bouldern">Bouldering</string>
    <string name="nav_title_settings">Settings</string>
    <string name="dialog_stil">Style</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_date">Date</string>
    <string name="dialog_area">Area</string>
    <string name="dialog_sector">Sector</string>
    <string name="dialog_level">Level</string>
    <string name="dialog_rating">Rating</string>
    <string name="dialog_comment">Comment</string>
    <string name="dialog_tries_header">Tries</string>
    <string name="dialog_tries_not_set">Not set</string>
    <string name="line_chart_dialog_hardest_routes">The 10 hardest routes</string>
    <string name="app_ok">Ok</string>
    <string name="app_save">Save</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_close">Close</string>
    <string name="app_deleted">Deleted</string>
    <string name="app_no">No</string>
    <string name="dialog_langoage_choose_header">Welche Sprache ? Which language ?</string>
    <string name="showcase_gerne">Happy to</string>
    <string name="showcase_further">Next</string>
    <string name="showcase_finish">Ready</string>
    <string name="showcase_app_welcome">Welcome</string>
    <string name="showcase_question_text_show_case">Would you like to take a little info tour of the app ?</string>
    <string name="showcase_header">Climbing Diary</string>
    <string name="showcase_info">An app to track and evaluate your boulder and climbing routes</string>
    <string name="showcase_addNewRouteHeader">Add new routes</string>
    <string name="showcase_addNewRouteText">New routes can be added by clicking</string>
    <string name="showcase_searchBarHeader">Search</string>
    <string name="showcase_searchBarText">Search for routes, sectors, areas and grades</string>
    <string name="showcase_filterBarHeader">Filter</string>
    <string name="showcase_filterBarText">Filter by areas</string>
    <string name="route_item_comment">Comment</string>
    <string name="route_item_dialog_delete">Are you sure ?</string>
    <string name="route_item_no_comment">No comment added yet</string>
    <string name="route_soft">Soft</string>
    <string name="route_hard">Hard</string>
    <string name="action_edit">Edit entry</string>
    <string name="action_delete">Delete entry</string>
    <string name="export_excel_summary">Export Database to Excel File</string>
    <string name="import_excel_summary">Import Excel File to Existing Database</string>
    <string name="excel_export_title">Export Excel</string>
    <string name="import_export_title">Import Excel</string>
</resources>
